@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Do not pause the game in places where not relevant (bug #984) - Alex
 - Fixed crashes and potential weirdness when loading savegames from
   a Homeworld encounter screen (bug #997) - Alex
 - Cleanup of GLOBAL(ShipStamp.frame) abuse; fixes bug #1054 - Alex
